[package]
name = "cortex"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/cortex"
homepage = "https://www.github.com/aacebo/cortex"
repository = "https://www.github.com/aacebo/cortex"

[lib]
doctest = false

[dependencies]
chrono = "0.4"
ulid = "1.2"
