[package]
name = "fsim"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/fsim"
homepage = "https://www.github.com/aacebo/fsim"
repository = "https://www.github.com/aacebo/fsim"

[lib]
doctest = false

[dependencies]
chrono = "0.4"
ulid = "1.2"
